[project]
name = "pyephem-sunpath"
version = "0.2.3"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "pyephem>=9.99",
]

[dependency-groups]
dev = [
    "coverage>=4.5.1",
    "flake8>=3.5.0",
    "pip>=9.0.1",
    "pytest>=7.0",
    "sphinx>=1.7.1",
    "tox>=2.9.1",
    "twine>=1.10.0",
    "watchdog>=0.8.3",
    "wheel>=0.38.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

