[project]
name = "pyephem-sunpath"
version = "0.2.4"
description = "Calculate sunpath using pyephem"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
  { name = "Santosh Philip", email = "santosh_philip@nomail.com" }
]
license = { text = "LGPLv3" }
keywords = ["pyephem-sunpath", "pyephem_sunpath", "sunpath" , "solar"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
]
dependencies = ["pyephem>=9.99"]

[project.urls]
Homepage =   "https://github.com/santoshphilip/pyephem_sunpath"
Repository = "https://github.com/santoshphilip/pyephem_sunpath"
Issues = "https://github.com/santoshphilip/pyephem_sunpath/issues"

[dependency-groups]
dev = [
    "coverage>=4.5.1",
    "flake8>=3.5.0",
    "pip>=9.0.1",
    "pytest>=7.0",
    "sphinx>=1.7.1",
    "tox>=2.9.1",
    "twine>=1.10.0",
    "watchdog>=0.8.3",
    "wheel>=0.38.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

